fix search overlap and logout

--- a/src/styles/partials/_search.scss
+++ b/src/styles/partials/_search.scss
@@ -92,7 +92,7 @@
     height: 22.875rem;
     background: $white;
     box-shadow: 0.0625rem 0.0625rem 0.25rem rgba($black, 0.15);
-    z-index: 1;
+    z-index: 2;
     overflow-y: auto;
     text-align: start;
   }
